apps/kubernetes/k3s/apps/semaphore/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: semaphore
  namespace: semaphore
spec:
  selector:
    app: semaphore
  ports:
    - name: http
      port: 3000
      targetPort: 3000
