apps/kubernetes/k3s/apps/semaphore/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: semaphore
  namespace: semaphore
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`semaphore.hughboi.vip`)
      kind: Rule
      services:
        - name: semaphore
          port: 3000
  tls:
    secretName: hughboi-tls
